feature/newest
Created controller and router for the newest products. Sorted it from the newest to the oldest and limited it to 15
